# iris

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: main.rs  scene.rs
src/bxdf/: bsdf.rs  fresnel.rs  lambertian.rs  microfacet_reflection.rs  mod.rs  oren_nayar.rs  specular_reflection.rs
src/bxdf/microfacet/: beckmann.rs  mod.rs  trowbridge_reitz.rs
src/camera/: mod.rs  orthographic.rs  perspective.rs
src/film/: camera.rs  color.rs  image.rs  mod.rs  render.rs  render_target.rs  spectrum.rs
src/film/filter/: mitchell.rs  mod.rs  triangle.rs
src/geometry/: disk.rs  interaction.rs  mod.rs  primitive.rs  receiver.rs  sphere.rs
src/integrator/: mod.rs  normals.rs  path.rs  whitted.rs
src/light/: diffuse_area.rs  emitter.rs  mod.rs  point.rs  spot.rs
src/light/area/: diffuse.rs  mod.rs
src/material/: matte.rs  mirror.rs  mod.rs  plastic.rs
src/math/: bounds.rs  efloat.rs  local_point.rs  local_vec.rs  localnormal.rs  localvec.rs  misc.rs  mod.rs  normal.rs  point.rs  point2.rs  point3.rs  point_base.rs  ray.rs  sample.rs  shading_normal.rs  shading_vec.rs  shadingvec.rs  transform.rs  vec.rs  vec2.rs  vec3.rs  vec_base.rs  vecbase.rs
src/sampler/: mod.rs  random.rs  uniform.rs
src/texture/: constant.rs  mod.rs
