[package]
authors = ["Matt Taylor <mstaveleytaylor@gmail.com>"]
edition = "2018"
name = "rt"
version = "0.1.0"

[dependencies]
arrayvec = "0.4.10"
bitflags = "1.0.4"
bumpalo = "2.2.2"
bvh = "0.3.1"
derive-new = "0.5.6"
image = "0.21.0"
indicatif = "0.11.0"
nalgebra = "0.17.2"
num = "0.2.0"
ordered-float = "1.0.2"
rand = "0.6.5"
rayon = "1.0.3"

byteorder = { version = "1.3.1", optional = true }
png = { version = "0.14.0", optional = true }

[features]
default = []
use_f64 = []
use_png16 = ["byteorder", "png"]
